task02/task02-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: regular-ingress
spec:
  rules:
    - host: app-v1.example.com
      http:
        paths:
          - path: '/'
            pathType: Prefix
            backend:
              service:
                name: service-for-regular
                port:
                  number: 80
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: canary-ingress
  annotations:
    nginx.ingress.kubernetes.io/canary: "true"
    nginx.ingress.kubernetes.io/canary-by-header: "canary"
    nginx.ingress.kubernetes.io/canary-by-header-value: "always"    
    nginx.ingress.kubernetes.io/canary-weight: "25"
spec:
  rules:
    - host: app-v1.example.com
      http:
        paths:
          - path: '/'
            pathType: Prefix
            backend:
              service:
                name: service-for-canary
                port:
                  number: 80
